<resources>
    <string name="app_name">CASHMEINV3</string>
    <string name="app_logo">Logo aplikacji</string>
    <string name="app_title">$karbonetka</string>
    <string name="default_web_client_id">453014390953-avqkb4gt5b65dj6kv892r97vp82norb3.apps.googleusercontent.com</string>
    <string name="facebook_app_id">2266639823692507</string>
    <string name="facebook_client_token">0b1e26a8425f66d5bb26e48cb0f7573f</string>
    <string name="fb_login_protocol_scheme">fb2266639823692507</string>
    <string name="default_notification_channel_id">default_channel</string>
    <string name="home">Home</string>
    <string name="calendar">Kalendarz</string>
    <string name="settings">Ustawienia</string>
    <string name="camera">Camera</string>
    <string name="enter_email">Wpisz Email</string>
    <string name="enter_password">Wpisz Hasło</string>
    <string name="log_in">Zaloguj</string>
    <string name="log_in_description">Zaloguj się na swoje konto</string>
    <string name="register">Nowe Konto</string>
    <string name="register_description">Stwórz nowe konto</string>
    <string name="log_in_google">Zaloguj się przez Google</string>
    <string name="log_in_facebook">Zaloguj się przez Facebook</string>
    <string name="forgot_password">Przypomnij Hasło</string>
    <string name="google_sign_in">Użyj</string>
    <string name="facebook_sign_in">Użyj</string>
    <string name="google_logo">Logo Google</string>
    <string name="facebook_logo">Logo Facebook</string>
    <string name="monthly_budget_input">Wprowadź miesięczny DOCHÓD</string>
    <string name="monthly_budget_hint">Miesięczny dochód</string>
    <string name="monthly_expenses_input">Wprowadź miesięczne PLANOWANE WYDATKI</string>
    <string name="expenses_hint">Planowane wydatki</string>
    <string name="calculate_budget">Zapisz budżet</string>
    <string name="daily_budget">Dzisiejszy budżet: %1$.2f PLN</string>
    <string name="savings">Zaoszczędziłeś: %1$.2f PLN</string>
    <string name="scan_receipt">Skanuj paragon</string>
    <string name="home_expenses_button_label">Wydatki</string>
    <string name="selected_date_text">Wybrana data: %1$s</string>
    <string name="daily_result_display">Wynik dnia: %1$s</string>
    <string name="error_loading_calendar_data">Błąd podczas ładowania danych kalendarza.</string>
    <string name="savings_display">Wyświetl oszczędności</string>
    <string name="show_expenses">Pokaż wydatki</string>
    <string name="hide_expenses_button_text">Ukryj wydatki</string>
    <string name="add_product">Dodaj produkt</string>
    <string name="confirm_add_product">Potwierdź dodanie</string>
    <string name="delete_item">Usuń</string>
    <string name="product_name_hint">Nazwa produktu</string>
    <string name="product_price_hint">Cena produktu (PLN)</string>
    <string name="product_category_hint">Kategoria produktu</string>
    <string name="category_prompt">Wybierz kategorię</string>
    <string name="daily_budget_remaining">Pozostało dzisiaj: %1$.2f PLN</string>
    <string name="monthly_income_display">Dochód mies.: %1$.2f PLN</string>
    <string name="previous_day_rollover_display">Przeniesiono z wczoraj: %1$.2f PLN</string>
    <string name="total_expenses_display">Pozycje: %1$d, Łączna wartość: %2$.2f PLN</string>
    <string name="total_scanned_value_text">Łączna wartość zeskanowanych przedmiotów: %1$.2f PLN</string>
    <string name="savings_text">Zaoszczędziłeś: %1$.2f PLN</string>
    <string name="daily_budget_text">Dzisiejszy budżet: %1$.2f PLN</string>
    <string name="daily_budget_after_expenses_text">Dzisiejszy budżet po wydatkach: %1$.2f PLN</string>
    <string name="monthly_budget">Dochód mies.: %1$.2f PLN</string>
    <string name="scanned_items">Pozycje: %1$d, Łączna wartość: %2$.2f PLN</string>
    <string name="error_getting_image_bitmap">Błąd: Nie udało się uzyskać obrazu.</string>
    <string name="error_camera_data_extras">Błąd: Brak danych z aparatu.</string>
    <string name="error_camera_launch">Nie można uruchomić aparatu.</string>
    <string name="error_no_camera_app">Brak dostępnej aplikacji aparatu.</string>
    <string name="error_processing_image">Błąd przetwarzania obrazu.</string>
    <string name="error_no_text_recognized">Nie rozpoznano żadnego tekstu.</string>
    <string name="error_text_recognition_failed">Błąd rozpoznawania tekstu: </string>
    <string name="error_receipt_items_not_found">Nie znaleziono pozycji na paragonie.</string>
    <string name="toast_items_added">Dodano %1$d pozycji o wartości %2$.2f PLN.</string>
    <string name="error_product_name_price_required">Nazwa i cena produktu są wymagane.</string>
    <string name="error_price_must_be_positive">Cena produktu musi być dodatnia.</string>
    <string name="error_invalid_price_format">Nieprawidłowy format ceny (użyj np. 10.50).</string>
    <string name="error_loading_items_list">Błąd ładowania listy przedmiotów.</string>
    <string name="error_deleting_item">Błąd usuwania pozycji.</string>
    <string name="error_loading_item">Błąd ładowania danych</string>
    <string name="error_inflating_view">Błąd tworzenia widoku listy</string>
    <string name="toast_product_added">Produkt \'%1$s\' dodany.</string>
    <string name="default_item_name">Produkt bez nazwy</string>
    <string name="default_category_other">Inne</string>
    <string name="default_category_scanned">Zeskanowane</string>
    <string name="default_scanned_item_name">Zeskanowany Produkt</string>
    <string name="toast_save_budget_success">Zapisano miesięczny dochód i planowane wydatki.</string>
    <string name="toast_input_required">Wprowadź obie wartości: dochód i planowane wydatki.</string>
    <string name="toast_invalid_number_format">Nieprawidłowy format liczb (użyj np. 4000 lub 1000.50).</string>
    <string name="toast_income_positive">Dochód musi być dodatni. Wydatki nie mogą być ujemne.</string>
    <string name="toast_camera_permission_denied">Odmówiono dostępu do kamery.</string>
    <string name="toast_camera_not_available">Brak dostępnej aplikacji aparatu.</string>
    <string name="toast_scan_not_recommended_home">Skanowanie paragonu w tym miejscu jest niezalecane.</string>
    <string name="toast_recognize_text_home_not_recommended">Rozpoznano tekst (implementacja w HomeActivity niezalecana).</string>
    <string name="error_initialization_home">Wystąpił błąd podczas uruchamiania aplikacji.</string>
    <string name="notification_channel_name">Podsumowania Miesięczne</string>
    <string name="notification_channel_description">Powiadomienia z podsumowaniem oszczędności.</string>
    <string name="monthly_summary_notification_title">Podsumowanie miesiąca: %1$s %2$d</string>
    <string name="monthly_summary_notification_text">Całkowity wynik: %1$s</string>
    <string name="notification_permission_denied">Odmówiono pozwolenia na powiadomienia. Podsumowania nie będą wysyłane.</string>
    <string name="cannot_send_notification_permission">Nie można wysłać powiadomienia - brak pozwolenia.</string>
    <string name="error_sending_notification">Błąd podczas wysyłania powiadomienia.</string>
    <string name="notification_permission_granted">Zezwolono na powiadomienia.</string>
    <string-array name="categories_array">
        <item>@string/category_prompt</item> 
        <item>Jedzenie</item>
        <item>Napoje</item> 
        <item>Transport</item>
        <item>Rachunki</item>
        <item>Rozrywka</item>
        <item>Ubrania</item>
        <item>Dom</item> 
        <item>Zdrowie</item>
        <item>@string/default_category_other</item> 
        <item>@string/default_category_scanned</item> 
    </string-array>
    <string-array name="language_options">
        <item>English</item> 
        <item>Polish</item> 
        <item>Spanish</item> 
        <item>French</item> 
    </string-array>
    <string name="setting_notifications_label">Powiadomienia</string>
    <string name="setting_sound_label">Dźwięk</string>
    <string name="setting_language_label">Język</string>
    <string name="setting_theme_label">Motyw</string>
    <string name="setting_on">WŁ</string>
    <string name="setting_off">WYŁ</string>
    <string name="theme_light">Jasny</string>
    <string name="theme_dark">Ciemny</string>
    <string name="theme_system">Systemowy</string>
    <string name="theme_high_contrast">Wysoki kontrast</string>
    <string name="button_logout">Wyloguj</string>
    <string name="button_save">Zapisz</string>
    <string name="settings_saved">Ustawienia zapisane</string>
    <string name="settings_saved_restarting">Ustawienia zapisane. Stosowanie zmian…</string>
    <string name="error_saving_settings">Błąd zapisu ustawień.</string>
    <string name="settings_no_changes">Nie wprowadzono zmian w ustawieniach.</string>
</resources>