<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:background="#07202D">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_title"
        android:textSize="28sp"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginBottom="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal"
        android:background="@drawable/rounded_background_white"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_background_white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monthly_budget_hint"
                android:textSize="16sp"
                android:textColor="#001219"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/budgetInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/monthly_budget_hint"
                android:inputType="numberDecimal"
                android:textSize="20sp"
                android:textColor="#001219"
                android:background="@drawable/rounded_edittext_background"
                android:padding="12dp"
                android:fontFamily="sans-serif"
                tools:ignore="HardcodedText"
                android:importantForAutofill="no"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_background_white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expenses_hint"
                android:textSize="16sp"
                android:textColor="#001219"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/expensesInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/expenses_hint"
                android:inputType="numberDecimal"
                android:textSize="20sp"
                android:textColor="#001219"
                android:background="@drawable/rounded_edittext_background"
                android:padding="12dp"
                android:fontFamily="sans-serif"
                tools:ignore="HardcodedText"
                android:importantForAutofill="no"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calculateBudgetButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#007B7F"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/calculate_budget"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/showExpensesButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#005F63"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/home_expenses_button_label"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_bottom_navigation"
        android:elevation="8dp"
        app:menu="@menu/bottom_nav_menu"
        app:itemIconTint="@color/bottom_nav_item_color"
        app:itemTextColor="@color/bottom_nav_item_color"
        app:labelVisibilityMode="labeled" />

</LinearLayout>